# ai-agents

./: .env.example  .gitignore  CHANGELOG.md  COURSE_SNIPPETS.md  README.md  adk_examples.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ai_agents/: __init__.py  agent.py  app.py  approval.py  config.py  tools.py
docs/adr/: 0001-flat-package-layout.md
examples/: README.md  approval_agent.py  mcp_agent.py  memory_agent.py
tests/: conftest.py  test_agent.py  test_approval.py  test_config.py  test_integration.py  test_tools.py
