[project]
name = "ai-agents"
version = "0.1.0"
description = "A commerce assistant built on Google ADK, with runnable ADK examples."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ashwin Santosh" }]
dependencies = [
    "google-adk[db]>=2,<3",
    "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.6,<1",
    "pip-audit>=2.7,<3",
]
mcp = [
    "mcp>=1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_agents"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
