[project]
name = "ai-agents"
version = "0.1.0"
description = "commerce assistant on google adk, with runnable examples"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ashwin Santosh" }]
dependencies = [
    "google-adk[db]>=2.3.0,<3",
    "platformdirs>=4.10.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10",
    "ruff>=0.15.18,<1",
    "pip-audit>=2.10.1,<3",
]
mcp = [
    "mcp>=1.28.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_agents"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
